pages/index.module.css
.homeGrid {
  margin: 0;
  display: flex;
  flex-direction: column;
}

.homeContent {
  display: flex;
  flex-direction: column;
  gap: 48px;
}

.homePageColumn {
  display: flex;
  flex-direction: column;
  flex: 1 1 0;
}

.headline {
  font-size: var(--text-size-headline);
  font-weight: 300;
  text-align: center;
  line-height: 0.9;
  letter-spacing: -2px;
  word-spacing: -8px;
  margin: 24px 0 48px;
}

.responsiveImage {
  max-width: 100%;
  height: auto;
}

.headlineImg {
  /* margin-top: 24px; */
  display: flex;
  justify-content: center;
}

.description {
  margin: 0;
}

.listenLinksHeader {
  margin-bottom: 0;
}

.listenLinks {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.formModal {
  position: absolute;
  display: flex;
  flex-direction: column;;
  right: 64px;
  bottom: 64px;
  background: #eee;
  box-shadow: 8px 8px #4A4A4A;
  height: fit-content;
  width: 334px;
  padding: 48px 64px;
  color: var(--color-primary-black);
}

.formModal h3 {
  font-size: var(--text-size-title-sm);
  margin: 0 0 24px;
}

.formModal ul {
  font-size: var(--text-size-md);
  padding-left: unset;
  list-style: none;
  margin: 0 0 24px;
}

.formModal ul li:before {
  content: "+";
  margin-right: 4px;
}

.formModal p {
  font-size: var(--text-size-sm);
  margin: 0 0 24px;
}

.dismissButton {
  position: absolute;
  top: 16px;
  right: 16px;
  height: 28px;
  width: 28px;
  border-radius: 14px;
  border: 1px solid var(--color-gray-600);
  cursor: pointer;
  background-color: var(--color-primary-white);
}

@media only screen and (min-width: 768px) {
  .homeContent {
    flex-direction: row;
  }
}

